# pygotm

./: .gitignore  .gitmodules  CMakeLists.txt  _pygotm.pyx  pyproject.toml  setup.py
.github/: run_cases.py
.github/workflows/: release.yml  test.yml
src/: pygotm_wrapper.F90
