[build-system]
requires = ["setuptools >= 61.0.0", "wheel", "numpy >= 2.0", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "pygotm"
version = "0.1.0"
authors = [
  {name = "Jorn Bruggeman", email = "jorn@bolding-bruggeman.com"},
  {name = "Karsten Bolding", email = "karsten@bolding-bruggeman.com"}
]
description = "Python interface to the General Ocean Turbulence Model"
dependencies = [
  "numpy >= 1.23.5"
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent"
]
